# process-manager-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
